--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "underscore": "1.5.2",
     "mongoose": "3.8.1",
-    "debug": "0.7.4"
+    "debug": "0.7.4",
+    "q": "0.9.7"
   },
   "devDependencies": {
     "mocha": "~1.15.1",
